package com.soloscape.util

object Constants {

    object Routes {
        const val WRITE_ID_ARG_KEY = "writeId"
        const val NOTE_ID_ARG_KEY = "noteId"
        const val NOTE_COLOR_ARG_KEY = "noteColor"

        const val FELT_ROUTE = "felt_route"
        const val WRITE_FELT_ROUTE = "write_route"
        const val IDEA_ROUTE = "idea_route"
        const val NOTE_IDEA_ROUTE = "note_route"

        const val DASHBOARD_ROUTE = "dashboard_route"
        const val SPLASH_ROUTE = "splash_route"
    }

    object TestTags {

        const val GENERIC_FAB_NAVIGATE = "GENERIC_FAB_NAVIGATE"
        const val GENERIC_FAB_ADD = "GENERIC_FAB_ADD"

        const val HI = "HI"
        const val YOUR_NAME_TEXT_FIELD = "YOUR_NAME_TEXT_FIELD"

        const val NOTE_CARD = "NOTE_CARD"
        const val JOURNAL_CARD = "JOURNAL_CARD"

        const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
        const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"

        const val NOTE_ITEM = "NOTE_ITEM"
        const val JOURNAL_ITEM = "JOURNAL_ITEM"

        const val BACK_PRESSED = "BACK_PRESSED"

        const val HORIZONTAL_PAGER = "HORIZONTAL_PAGER"
        const val VERTICAL_SCROLL = "VERTICAL_SCROLL"

        const val DELETE_YES_DIALOG = "DELETE_YES_DIALOG"
        const val MORE_VERT_CLICKED = "MORE_VERT_CLICKED"
        const val DELETE = "DELETE"

        const val EMPTY_CONTENT = "EMPTY_CONTENT"
    }
}
